# aurupd

./: .gitignore  README.md  aurjsonclient.py  pyproject.toml
src/aurupd/: __init__.py  aurjsonclient.py  aurpackage.py  cli.py
